epserde/tests/fail/aligned_cursor_bad_param.stderr
error[E0277]: the trait bound `String: AlignmentBlock` is not satisfied
  --> tests/fail/aligned_cursor_bad_param.rs:15:19
   |
15 |     let _cursor = AlignedCursor::<String>::new();
   |                   ^^^^^^^^^^^^^^^^^^^^^^^ the trait `AlignmentBlock` is not implemented for `String`
   |
help: the following other types implement trait `AlignmentBlock`
  --> src/utils/aligned_cursor.rs
   |
   | impl AlignmentBlock for Aligned16 {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Aligned16`
...
   | impl AlignmentBlock for Aligned64 {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Aligned64`
note: required by a bound in `epserde::utils::AlignedCursor`
  --> src/utils/aligned_cursor.rs
   |
   | pub struct AlignedCursor<T: AlignmentBlock = Aligned16> {
   |                             ^^^^^^^^^^^^^^ required by this bound in `AlignedCursor`

error[E0599]: the associated function or constant `new` exists for struct `epserde::utils::AlignedCursor<String>`, but its trait bounds were not satisfied
  --> tests/fail/aligned_cursor_bad_param.rs:15:44
   |
15 |     let _cursor = AlignedCursor::<String>::new();
   |                                            ^^^ associated function or constant cannot be called on `epserde::utils::AlignedCursor<String>` due to unsatisfied trait bounds
   |
  ::: $RUST/alloc/src/string.rs
   |
   | pub struct String {
   | ----------------- doesn't satisfy `String: AlignmentBlock`
   |
   = note: the following trait bounds were not satisfied:
           `String: AlignmentBlock`
